<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43193b"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textabout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="7dp"
                android:text="@string/textabout"
                android:textColor="#0fffff"
                android:textSize="30sp"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/textVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/textVersion"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/textCreate"
                android:textColor="#0fffff"
                android:textSize="23sp"
                android:textStyle="italic" />

            

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textName"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />
            

            <TextView
                android:id="@+id/textName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textName1"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />

            

            <TextView
                android:id="@+id/textDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/textDetails"
                android:textColor="#0fffff"
                android:textSize="23sp" 
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="7dp"
                android:text="@string/textView1"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textView2"
                android:textColor="#0fffff"
                android:textSize="18sp" 
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textView3"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textView4"
                android:textColor="#0fffff"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/textSuggestions"
                android:textColor="#0fffff"
                android:textSize="20sp" 
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textgmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/textgmail"
                android:textColor="#0fffff"
                android:textSize="18sp" 
                android:textStyle="italic"/>

            <ImageButton
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:src="@drawable/ic_action_back"
                android:textColor="#0fffff"
                android:textSize="19sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>